# amms-rs

./: Cargo.toml  rustfmt.toml
benches/: uniswapv2_simulate.rs
examples/: discover-erc-4626-vaults.rs  discover-factories.rs  filter-value.rs  simulate-swap.rs  state-space.rs  swap-calldata.rs  sync-amms.rs
src/: errors.rs
src/amm/: factory.rs  mod.rs  storage.rs
src/amm/erc_4626/: mod.rs
src/amm/erc_4626/batch_request/: mod.rs
src/amm/shallow_amm/: mod.rs  shallow_v2.rs  shallow_v3.rs
src/amm/uniswap_v2/: factory.rs  mod.rs
src/amm/uniswap_v2/batch_request/: mod.rs
src/amm/uniswap_v3/: factory.rs  liquidity_math.rs  mod.rs  oracle.rs  position.rs  tick.rs  tick_bitmap.rs  util.rs
src/amm/uniswap_v3/batch_request/: mod.rs
src/discovery/: erc_4626.rs  factory.rs
src/filters/: address.rs  value.rs
src/state_space/: cache.rs  error.rs  mod.rs
src/sync/: checkpoint.rs  mod.rs
