[package]
name = "amms"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "A library to interact with automated market makers across EVM chains."
readme = "README.md"
homepage = "https://github.com/darkforestry/amms-rs"
repository = "https://github.com/darkforestry/amms-rs"
keywords = ["ethereum", "amm", "mev"]
exclude = ["target/*", ".github/*", ".gitignore"]

[dependencies]
arraydeque = { version = "0.5", optional = true }
async-trait = "0.1.82"
eyre = "0.6.12"
futures = "0.3.30"
lazy_static = "1.5.0"
num-bigfloat = "1.7.1"
regex = "1.10.6"
serde = "1.0.209"
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.40.0", default-features = false }
tracing = { version = "0.1.40", features = ["log"] }
uniswap_v3_math = { path = "../uniswap-v3-math" }
alloy = { version = "0.7.3", features = [
    "contract",
    "network",
    "provider-ws",
    "rpc-types-eth",
    "signer-local",
] }

[features]
default = ["filters", "state-space"]
filters = []
state-space = ["arraydeque"]
# TODO: Uncomment this when artemis is published as a crate
# artemis = ["artemis-core"]
artemis = []

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = "0.3"
criterion = "0.5"
tokio = { version = "1.38", default-features = false, features = [
    "rt-multi-thread",
] }
alloy = { version = "0.3.1", features = ["rpc-client"] }

[[bench]]
name = "state_space"
harness = false

[[bench]]
name = "uniswapv2_simulate"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
debug = "full"
